fix footer not being on bottom when scrolling out of page, make sure it doesn't overlap with the content

--- a/core/css/server.css
+++ b/core/css/server.css
@@ -23,7 +23,7 @@ body{margin:0px;padding:0px;font-family:'Ubuntu', sans-serif}
 .page-wrap .header #menu ul li{display:inline-block}
 .page-wrap .header #menu ul li a{font-family:'Ubuntu', sans-serif;font-size:16px;text-align:left;font-weight:500;color:#555;text-transform:uppercase;margin-right:10px}
 .page-wrap .header #menu ul li a:hover{color:#f45d00;cursor:pointer;text-decoration:none}
-.page-wrap .footer{background-color:#2C2C2C;margin:0;padding:0px}
+.page-wrap .footer{background-color:#2C2C2C;margin:0;padding:0px;width:100%;bottom:0;height:400px;margin-top:-400px;}
 .page-wrap .footer .logo p{color:#fff;font-size:12px;font-weight:400}
 .page-wrap .footer #menu{line-height:110px}
 .page-wrap .footer #menu ul{padding:0;text-align:right}
@@ -50,10 +50,8 @@ html, body {
     margin: 0;
 }
 
-body > #page {
+#page {
     height: 800px;
-    min-height: 55%;
-    max-height: calc(100% - 300px);
     background: url("../img/bg_page.png") no-repeat left center;
     background-size: contain;
     position: relative;
